- Removed unnecessary 'final' keyword - Replaced Stream.toList() with Collectors.toList() - Fixed setter usage